--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "feliz-nft",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "ethers": "^5.5.4",
-    "moralis": "^1.3.2",
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-draggable": "^4.4.4",
-    "react-moralis": "^1.3.1",
-    "sass": "^1.49.7",
-    "sharp": "^0.30.1",
-    "web3": "^1.7.0"
-  },
-  "devDependencies": {
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
-  }
+    "name": "feliz-nft",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.3.0",
+        "@fortawesome/free-solid-svg-icons": "^6.0.0",
+        "@fortawesome/react-fontawesome": "^0.1.17",
+        "ethers": "^5.5.4",
+        "next": "12.0.9",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-draggable": "^4.4.4",
+        "react-loader-spinner": "^5.1.4",
+        "react-loading-icons": "^1.0.8",
+        "react-modal": "^3.14.4",
+        "sass": "^1.49.7",
+        "sharp": "^0.30.1",
+        "web3": "^1.7.0"
+    },
+    "devDependencies": {
+        "eslint": "8.8.0",
+        "eslint-config-next": "12.0.9",
+        "prettier-plugin-solidity": "^1.0.0-beta.19"
+    }
 }
