--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     },
     "devDependencies": {
         "eslint": "8.8.0",
-        "eslint-config-next": "12.0.9",
-        "prettier-plugin-solidity": "^1.0.0-beta.19"
+        "eslint-config-next": "12.0.9"
     }
 }
