--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
+        "axios": "^0.26.0",
         "ethers": "^5.5.4",
+        "metamask-react": "^2.3.0",
         "next": "12.0.9",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-draggable": "^4.4.4",
-        "react-loader-spinner": "^5.1.4",
         "react-loading-icons": "^1.0.8",
         "react-modal": "^3.14.4",
         "sass": "^1.49.7",
