--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@fortawesome/react-fontawesome": "^0.1.17",
         "axios": "^0.26.0",
         "ethers": "^5.5.4",
+        "keccak256": "^1.0.6",
+        "merkletreejs": "^0.2.30",
         "metamask-react": "^2.3.0",
         "next": "12.0.9",
         "react": "17.0.2",
