--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
         "web3": "^1.7.0"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.4",
         "eslint": "8.8.0",
-        "eslint-config-next": "12.0.9"
+        "eslint-config-next": "12.0.9",
+        "postcss": "^8.4.12",
+        "tailwindcss": "^3.0.24"
     }
 }
