--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
+        "@headlessui/react": "^1.5.0",
         "axios": "^0.26.0",
         "ethers": "^5.5.4",
         "keccak256": "^1.0.6",
@@ -23,7 +24,7 @@
         "react-modal": "^3.14.4",
         "sass": "^1.49.7",
         "sharp": "^0.30.1",
-        "web3": "^1.7.0"
+        "web3": "^1.7.3"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.4",
