stardust page release 1
main page
 - change ship picture
 - change boat picture
 - fix style to support tailwindcss

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-modal": "^3.14.4",
         "sass": "^1.49.7",
         "sharp": "^0.30.1",
+        "typewriter-effect": "^2.18.2",
         "web3": "^1.7.3"
     },
     "devDependencies": {
