--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,8 @@ yarn-error.log*
 *.lock
 
 # contracts
-/contracts/articles
+/contracts/artifacts
+/contacts/.deps
 
 # whitelist
 wl_stardust.json
