--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "keccak256": "^1.0.6",
         "merkletreejs": "^0.2.30",
         "metamask-react": "^2.3.0",
+        "moment": "^2.29.3",
         "next": "12.0.9",
         "react": "17.0.2",
         "react-dom": "17.0.2",
